Closed Bug 398404 Opened 18 years ago Closed 18 years ago

[FIX]Disallow reflow while processing constructors

Categories

(Core :: XBL, defect)

1.8 Branch
x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

(Keywords: dev-doc-complete, fixed1.8.1.8, Whiteboard: restore pre-267833 status quo to prevent regressions)

Attachments

(1 file)

See bug 375390 comment 24. I'll try to get a patch together today.
Flags: blocking1.8.1.8?
If you only have time for one I'd prefer a branch patch for bug 387544
To be honest, that one is a _lot_ more work and needs pretty extensive testing for any patch we come up with. See bug 387544 comment 1. It shouldn't be going in this close to the end of a branch cycle. :(
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #283411 - Flags: superreview?(dbaron)
Attachment #283411 - Flags: review?(dbaron)
Summary: Disallow reflow while processing constructors → [FIX]Disallow reflow while processing constructors
Comment on attachment 283411 [details] [diff] [review] Fix (branch only) r+sr=dbaron
Attachment #283411 - Flags: superreview?(dbaron)
Attachment #283411 - Flags: superreview+
Attachment #283411 - Flags: review?(dbaron)
Attachment #283411 - Flags: review+
Comment on attachment 283411 [details] [diff] [review] Fix (branch only) Requesting branch approval. I think this should be pretty safe in the sense that it restores the status quo before bug 267833 was checked in.
Attachment #283411 - Flags: approval1.8.1.8?
Comment on attachment 283411 [details] [diff] [review] Fix (branch only) approved for 1.8.1.8, a=dveditz for release-drivers
Attachment #283411 - Flags: approval1.8.1.8? → approval1.8.1.8+
Flags: blocking1.8.1.8? → blocking1.8.1.8+
Whiteboard: restore pre-267833 status quo to prevent regressions
Checked in on branch.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1.8
Resolution: --- → FIXED
We should document the change from branch to trunk here: on trunk, trying to get layout information in an XBL constructor will actually get up-to-date information, triggering restyles and reflow as needed. On branch you don't get that.
Keywords: dev-doc-needed
This is now documented. See: http://developer.mozilla.org/en/docs/XBL:XBL_1.0_Reference:Elements#constructor Marking as doc completed. Is this going into some build of Firefox 2? I ask because of the approval for 1.8.1.8. If so, which Firefox version does it apply to?
> Is this going into some build of Firefox 2? The patch that went into the branch was to restore the old branch behavior (not allowing reflow inside a constructor). So there's no need for branch documentation changes here.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: