Don't allow reflow/style flushes during XBL constructor execution, for compat reasons.  Bug 398404, r+sr=dbaron, a=dveditz